--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js",
     "eslint": "eslint",
     "pre-check": "tsc && npx lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "husky install"
   },
   "lint-staged": {
     "src/**/*.{tsx,tsx}": [
