--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,16 +26,15 @@
      "[markdown]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
      },
-     "[css]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-     },
-     "[less]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-     },
-     "[scss]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-     },
      "liveServer.settings.port": 5502,
-
-
+      // 开启stylelint自动修复
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": "explicit"
+    },
+     // 关闭编辑器内置样式检查（避免与stylelint冲突）
+     "css.validate": false,
+     "less.validate": false,
+     "scss.validate": false,
+     // 配置stylelint检查的文件类型范围
+     "stylelint.validate": ["css", "less"],
    }
